section 애니메이션 해야함

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -22,7 +22,8 @@
       "path": "scss/style.scss",
       "imports": [
         "scss/_base.scss",
-        "scss/_mixin.scss"
+        "scss/_mixin.scss",
+        "scss/_media.scss"
       ]
     }
   ],
