메인 애니메이션 완료

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,12 +23,13 @@
       "imports": [
         "scss/_base.scss",
         "scss/_mixin.scss",
+        "scss/_ani.scss",
         "scss/_media.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
